--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,30 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+blog_list:
+    path: /blog
+    controller: App\Controller\BlogController::list
+
+
+api_post_show:
+    path: /api/posts/{id}
+    controller: App\Controller\BlogApiController::show
+    methods: GET|HEAD
+
+
+api_post_edit:
+    path: /api/posts/{id}
+    controller: App\Controller\BlogApiController::edit
+    methods: PUT
+
+
+sign_up:
+    path: /sign-up
+    controller: App\Controller\SignUpController::index
+    methods: [GET]
+
+user_profile:
+    path: /user/{username}
+    controller: App\Controller\UserProfileController::index
+    methods: [GET]
